インタビュー08 > リンク先変更

--- a/interview/column8_01.html
+++ b/interview/column8_01.html
@@ -160,7 +160,7 @@ $(function(){
 							<img data-src="images/col8_1_04.jpg" class="sp w90s lazyload mgb5" alt="心を込めて制作された陶芸たち" />
 							<p class="sp w90s s-S mgb5 mgb10s">店内に飾られているジェームスさんが一つ一つ丁寧に作り上げた陶芸品。
 								横には、クリスマスシーズン( 取材時) でツリーが装飾されていました。</p>
-							<div class="next_page mgb10 mgb10s"><a href="column8_02.html" class="s-M">次ページ：dia. Dance Studioの代表として</a></div>
+							<div class="next_page mgb10 mgb10s"><a href="column8_02.html" class="s-M">次ページ：陶芸も手ごねパンも一から自分で作り上げていく。</a></div>
 							<div class="page_box">
 									<div><!--<a href="column6_01.html">前へ</a>--></div>
 									<ul>
